<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="bottom|center|left"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal"
        android:background="@color/flinty_general_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.qmuiteam.qmui.widget.QMUIVerticalTextView
                android:id="@+id/colorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/text_color_in_general_back"
                android:textSize="36sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/color1Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/colorType1"
                    android:textColor="@color/text_color_in_general_back"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/color1Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/app_name"
                    android:textColor="@color/text_color_in_general_back"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/color2Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/colorType2"
                    android:textColor="@color/text_color_in_general_back"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/color2Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/app_name"
                    android:textColor="@color/text_color_in_general_back"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/color3Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/colorType3"
                    android:textColor="@color/text_color_in_general_back"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/color3Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/app_name"
                    android:textColor="@color/text_color_in_general_back"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/color4Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/colorType4"
                    android:textColor="@color/text_color_in_general_back"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/color4Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/app_name"
                    android:textColor="@color/text_color_in_general_back"
                    android:textSize="18sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/color5Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/colorType5"
                    android:textColor="@color/text_color_in_general_back"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/color5Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/app_name"
                    android:textColor="@color/text_color_in_general_back"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:id="@+id/color6Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/colorType6"
                    android:textColor="@color/text_color_in_general_back"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/color6Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/app_name"
                    android:textColor="@color/text_color_in_general_back"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>